Use the correct supervisor user name

--- a/supervisor/supervisor-app.conf
+++ b/supervisor/supervisor-app.conf
@@ -18,6 +18,6 @@ pidfile=/var/run/saslauthd/saslauthd.pid
 startsecs=0
 autostart=true
 autorestart=true
-username=prosody
+user=prosody
 command=prosody
 pidfile=/var/run/prosody/prosody.pid
