--- a/supervisor/supervisor-app.conf
+++ b/supervisor/supervisor-app.conf
@@ -11,6 +11,10 @@ nodaemon=true
 startsecs=0
 autostart=true
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 command=/usr/sbin/saslauthd -d -a ldap -O /etc/saslauthd.conf
 pidfile=/var/run/saslauthd/saslauthd.pid
 
@@ -18,6 +22,10 @@ pidfile=/var/run/saslauthd/saslauthd.pid
 startsecs=0
 autostart=true
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 user=prosody
 command=prosody
 pidfile=/var/run/prosody/prosody.pid
